--- a/css/player.css
+++ b/css/player.css
@@ -1,3 +1,5 @@
+/* player.js */
+
 /* Player Info */
 #player-info {
   background-color: var(--color-secondary);
@@ -190,7 +192,7 @@
 /* Character Creation */
 #character-creation {
   position: fixed;
-  top: 50%;
+  top: 27%;
   left: 50%;
   transform: translate(-50%, -50%);
   background-color: var(--color-secondary);
