--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,5 @@
+/* styles.css */
+
 /* Global Variables */
 :root {
   --color-background: #1E1E1E;
@@ -134,7 +136,7 @@ h1 {
 #console {
   width: 100%;
   max-width: 800px;
-  height: 134px;
+  height: 194px;
   border: 2px solid var(--color-primary);
   background-color: var(--color-secondary);
   color: var(--color-text);
